-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.12
An application crashes when the open method of the XMLHttpRequest object is called from a separate .js file.
| For Gerrit Dashboard: QTBUG-75983 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 262573,6 | Remove null pointer checks for "this" from QQmlContextData::resolvedUrl() | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 262616,2 | Fix crashes in QQmlXMLHttpRequest | 5.12 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 296579,2 | Remove null pointer checks for "this" from QQmlContextData::resolvedUrl() | 5.12.6 | qt/qtdeclarative | Status: ABANDONED | -1 | 0 |